[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive_floor"
version = "0.1.6"
description = "A lightweight Python library for precise number flooring and formatting. Includes adaptive decimal precision based on the fractional magnitude."
readme = "README.md"
requires-python = ">=3.6"
license = {text = "GPL-3.0-only"}
authors = [
    {name = "tnam0x", email = "namtran4194@gmail.com"}
]
urls = {Homepage = "https://github.com/tnam0x/adaptive_floor"}

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

dependencies = []
